--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ documentation = "https://docs.saleor.io/"
   cryptography = "^42.0.5"
   dj-database-url = "^2"
   dj-email-url = "^1"
-  django = {version = "^3.2.24", extras = ["bcrypt"]}
+  django = {version = "^4.2", extras = ["bcrypt"]}
   django-cache-url = "^3.1.2"
   # This is related to the issue with setuptools:
   # https://github.com/pypa/setuptools/issues/4519. It can be removed when 2.7.0 is
@@ -69,7 +69,6 @@ documentation = "https://docs.saleor.io/"
   posuto = "^2024.7.0"
   prices = "^1.0"
   promise = "^2.3"
-  psycopg2 = "^2.8.3"
   pybars3 = "^0.9.7"
   pyjwt = "2.5.0" # Version 2.6.0 changed iat validation which causes tests to fail: https://github.com/saleor/saleor/issues/11047
   python-dateutil = "^2.8.2"
@@ -91,6 +90,7 @@ documentation = "https://docs.saleor.io/"
   uvicorn = {extras = ["standard"], version = "^0.23.1"}
   weasyprint = ">=53.0" # libpango >=1.44 is required
   setuptools = "^70.1.0"
+  psycopg = "^3.1.8"
 
     [tool.poetry.dependencies.celery]
     version = ">=4.4.5,<6.0.0"
@@ -158,7 +158,7 @@ extend_exclude = ["conftest\\.py", ".*/conftest\\.py", ".*/tests/.*"]
 
   [tool.deptry.per_rule_ignores]
   DEP001 = ["pkg_resources"]
-  DEP002 = ["azure-common", "azure-storage-blob", "azure-storage-common", "django-redis", "gunicorn", "psycopg2"]
+  DEP002 = ["azure-common", "azure-storage-blob", "azure-storage-common", "django-redis", "gunicorn", "psycopg"]
   DEP004 = ["debug_toolbar", "graphiql_debug_toolbar"]
 
 [tool.ruff]
