--- a/.github/workflows/publish-containers.yml
+++ b/.github/workflows/publish-containers.yml
@@ -1,7 +1,7 @@
 name: Publish
 
 on:
-  push:
+  workflow_dispatch:
     tags:
       # Matches stable and pre-releases
       - "[0-9]+.[0-9]+.[0-9]+*"
